# p2p-chat

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: ci.yml
proto/: dfs_control.proto
scripts/: demo-two-node.sh
src/: behaviour.rs  config.rs  control_plane.rs  download.rs  error.rs  grpc_api.rs  identity.rs  lib.rs  main.rs  manifest.rs  merkle.rs  node.rs  protocol.rs  storage.rs  validation.rs
src/node/: client.rs  mod.rs  peer_state.rs  runtime.rs  types.rs
tests/: dfs_integration.rs
