[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"
authors = ["ozankenangungor"]
description = "A production-ready libp2p DFS node with local gRPC control plane"
license = "MIT"
repository = "https://github.com/ozankenangungor/p2p-chat"
readme = "README.md"
keywords = ["p2p", "dfs", "libp2p", "networking"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1.43", features = ["full", "signal"] }

libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "ping",
    "kad",
    "gossipsub",
    "identify",
    "request-response",
    "json",
    "macros",
    "mdns",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
bytes = { version = "1.10", features = ["serde"] }
hex = "0.4"
blake3 = "1.5"
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "zstd", "multi-threaded-cf"] }
async-trait = "0.1"
prost = "0.12"
tonic = { version = "0.11", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net"] }

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "p2p-chat"
path = "src/main.rs"
